fixed issues with friends finding and user synchronization in some places